--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: GodCraft
-version: 1.8
+version: 1.9
 author: TheHarrisonCrafter
 main: net.theharrisoncrafter.God
 website: http://dev.bukkit.org/server-mods/god-craft/
@@ -10,6 +10,9 @@ commands:
   burn:
     description: Sets a player on fire.
     usage: /burn <username>
+  feed:
+    description: Sets a players food bar to max.
+    usage: /feed [username]
   getcrafting:
     description: Shows a crafting window.
     usage: /getcrafting
@@ -38,6 +41,24 @@ commands:
   ping:
     description: This is a Ping utility.
     usage: /ping
+  setfoodlevel:
+    description: Set the foodbar level for a player.
+    usage: /setfoodlevel <username> <level>
+  sethealth:
+    description: Set the health for a player.
+    usage: /sethealth <username> <health>
+  setlevel:
+    description: Set the level for a player.
+    usage: /setlevel <username> <level>
+  setmaxair:
+    description: Set the maximum air for a player.
+    usage: /setmaxair <username> [airleval]
+  setmaxhealth:
+    description: Set the maximum health for a player.
+    usage: /setmaxhealth <username> [healthleval]
+  starve:
+    description: Set a players food bar to zero.
+    usage /starve [username]
   throw:
     description: Make a player throw a snowball, egg, or arrow.
     usage: /throw [username] <egg,snowball,arrow>
@@ -51,6 +72,7 @@ permissions:
       children:
         GodCraft.Boom: true
         GodCraft.Burn: true
+        GodCraft.Feed: true
         GodCraft.Getcrafting: true
         GodCraft.Getenchanting: true
         GodCraft.Getenderchest: true
@@ -60,6 +82,12 @@ permissions:
         GodCraft.Murder: true
         GodCraft.Nickname: true
         GodCraft.Ping: true
+        GodCraft.Setfoodlevel: true
+        GodCraft.Sethealth: true
+        GodCraft.Setlevel: true
+        GodCraft.Sermaxair: true
+        GodCraft.Setmaxhealth: true
+        GodCraft.Starve: true
         GodCraft.Throw: true
         GodCraft.Troll: true
     GodCraft.Boom:
@@ -67,6 +95,9 @@ permissions:
       default: op
     GodCraft.Burn:
       description: Allows user to use burn command.
+      default: op
+    GodCraft.Feed:
+      description: Allows user to use feed command.
       default: op
     GodCraft.Getcrafting:
       description: Allows user to use getcrafting command.
@@ -95,6 +126,24 @@ permissions:
     GodCraft.Ping:
       description: Allows user to use ping command.
       default: true
+    GodCraft.Setfoodlevel:
+      description: Allows user to use setfoodlevel command.
+      default: op
+    GodCraft.Sethealth:
+      description: Allows user to use sethealth command.
+      default: op
+    GodCraft.Setlevel:
+      description: Allows user to use setlevel command.
+      default: op
+    GodCraft.Setmaxair:
+      description: Allows user to use setmaxair command.
+      default: op
+    GodCraft.Setmaxhealth:
+      description: Allows user to use setmaxair command.
+      default: op
+    GodCraft.Starve:
+      Description: Allows user to use starve command.
+      default: op
     GodCraft.Throw:
       description: Allows user to use throw command.
       default: op
